--- a/index.html
+++ b/index.html
@@ -6,31 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel='stylesheet' href="./assets/style.css">
+    <script src="https://kit.fontawesome.com/b9d857a889.js" crossorigin="anonymous"></script>
     <title>Sarah Egleston</title>
 </head>
 
 <body>
     <div class="background">
-
+        <!-- Nav -->
         <header>
-            <h1></h1>
+            <nav>
+                <div class="left">
+                    <h1>Sarah.</h1>
+                </div>
+                <div class="right">
+                    <a href="#about">About me</a>
+                    <a href="#portfolio">Portfolio</a>
+                    <a href="#contact">Contact Me</a>
+                </div>
+            </nav>
+            <section id="about">
+                <div class="container">
+                    <div class="intro">
+                        <div class="text">
+                            <h2>Hello, I'm Sarah</h2>
+                            <h3>An aspiring Full Stack Developer</h3>
+                            <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
+                                Critical Care Veterinary Nurse and
+                                Veterinary advisor within the pet insurance area. My passion for problem-solving and
+                                learning new technologies motivated me to transition into the tech industry.
+                                In March 2023, I moved into an RPA (Robotic Process
+                                Automation) Developer role.
+                            </p>
+                            <p>
+                                Fuelled by my love for learning, I recently completed a certificate in Front End Web
+                                Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
+                                online courses to further enhance my front-end development skills and pave the way
+                                towards becoming a full-stack developer.
+                            </p>
+                            <a href="#portfolio"><button>Portfolio</button></a>
+                            <a href="#contact"><button>Contact Me</button></a>                        </div>
+                        <div class="photo">
+                            <img src="./assets/images/ir.png" alt="Photo of Sarah Egleston">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </header>
 
-        <div>
-            <div>
-                <aside>
-                </aside>
+        <main>
+            
 
-                <div>
-                    <section>
-                    </section>
-                    <section>
-                    </section>
-                </div>
-            </div>
-        </div>
+            <section id="contact">Contact Me Section</section>
+        </main>
+
+        <footer id="footer">
+            <i id="arrow" class="fa-solid fa-circle-arrow-up"></i>
+        </footer>
+        
+
     </div>
 
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
