--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                                 towards becoming a full-stack developer.
                             </p>
                             <a href="#portfolio"><button>Portfolio</button></a>
-                            <a href="#contact-skills"><button>Contact Me</button></a>                        </div>
+                            <a href="#contact-skills"><button>Contact Me</button></a>
+                        </div>
                         <div class="photo">
                             <img src="./assets/images/ir.png" alt="Photo of Sarah Egleston">
                         </div>
@@ -74,51 +75,53 @@
                 </div>
             </section>
 
-            <section id="portfolio">
-                <div class="container">
-                    <h2>Portfolio</h2>
-                    <div class="carousel">
-                        <!-- Carousel items -->
-                        <div class="card">
-                            <img src="./assets/images/Screenshot 2024-04-15 at 16.43.35.png" alt="devOpps screenshot">
-                            <div class="text">
-                                <h3>devOpps</h3>
-                                <p>devOpps is a collaberative project, using HTML, CSS, JavaScript and React to create a job platform specifically for developers looking for positions.</p>
-                                <a href="https://devopps.app/"><button>Go to Site</button></a>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="" alt="Project 2">
-                            <div class="text">
-                                <h3>Project 2</h3>
-                                <p>Description of Project 2</p>
-                                <a href="#">Deployed Site</a>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="image3.jpg" alt="Project 3">
-                            <div class="text">
-                                <h3>Project 3</h3>
-                                <p>Description of Project 3</p>
-                                <a href="#">Deployed Site</a>
-                            </div>
-                        </div>
+            <section id="projects">
+                <div class="project-container">
+                    <div class="project">
+                        <img src="./assets/images/Untitled design.png" alt="Project 1">
+                        <h3>Project Title 1</h3>
+                        <p>Description of Project 1.</p>
+                        <a href="https://devopps.app" class="button">Go to Site</a>
+                    </div>
+                    <div class="project">
+                        <img src="./assets/images/Untitled design.png" alt="Project 2">
+                        <h3>Project Title 2</h3>
+                        <p>Description of Project 2.</p>
+                        <a href="https://example.com" class="button">Go to Site</a>
+                    </div>
+                    <div class="project">
+                        <img src="./assets/images/Untitled design.png" alt="Project 2">
+                        <h3>Project Title 2</h3>
+                        <p>Description of Project 2.</p>
+                        <a href="https://example.com" class="button">Go to Site</a>
                     </div>
                 </div>
             </section>
-
-
             
+
+
+
+
+
+
         </main>
 
-<footer id="footer">
-    <i id="arrow" class="fa-solid fa-circle-arrow-up"></i>
-    <div class="footer-content">
-        <p>&copy; Sarah Egleston 2024</p>
-    </div>
-</footer>
-
+        <footer id="footer">
+            <div class="footer-inner">
+                <i id="arrow" class="fa-solid fa-circle-arrow-up"></i>
+                <div class="footer-content">
+                    <p>&copy; Sarah Egleston 2024</p>
+                </div>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </footer>
         
+
+
+
 
     </div>
 
