added js for projects

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 
             <section id="projects">
                 <div class="project-container">
-                    <div class="project">
+                    <div class="project fade-in-section">
                         <img src="./assets/images/Untitled design.png" alt="Project 1">
                         <h3>Project Title 1</h3>
                         <p>Description of Project 1.</p>
                         <a href="https://devopps.app" class="button">Go to Site</a>
                     </div>
-                    <div class="project">
+                    <div class="project fade-in-section">
                         <img src="./assets/images/Untitled design.png" alt="Project 2">
                         <h3>Project Title 2</h3>
                         <p>Description of Project 2.</p>
                         <a href="https://example.com" class="button">Go to Site</a>
                     </div>
-                    <div class="project">
+                    <div class="project fade-in-section">
                         <img src="./assets/images/Untitled design.png" alt="Project 2">
                         <h3>Project Title 2</h3>
                         <p>Description of Project 2.</p>
