--- a/index.html
+++ b/index.html
@@ -20,30 +20,17 @@
                 </div>
                 <div class="right">
                     <a href="#about">About me</a>
-                    <a href="#portfolio">Portfolio</a>
-                    <a href="#contact">Contact Me</a>
+                    <a href="#projects">Portfolio</a>
+                    <a href="#contact-skills">Contact Me</a>
                 </div>
             </nav>
-            <section id="about">
+            <section id="hero">
                 <div class="container">
                     <div class="intro">
                         <div class="text">
-                            <h2>Hello, I'm Sarah</h2>
-                            <h3>An aspiring Full Stack Developer</h3>
-                            <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
-                                Critical Care Veterinary Nurse and
-                                Veterinary advisor within the pet insurance area. My passion for problem-solving and
-                                learning new technologies motivated me to transition into the tech industry.
-                                In March 2023, I moved into an RPA (Robotic Process
-                                Automation) Developer role.
-                            </p>
-                            <p>
-                                Fuelled by my love for learning, I recently completed a certificate in Front End Web
-                                Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
-                                online courses to further enhance my front-end development skills and pave the way
-                                towards becoming a full-stack developer.
-                            </p>
-                            <a href="#portfolio"><button>Portfolio</button></a>
+                            <h2>Sarah Egleston</h2>
+                            <h3>A front end developer.</h3>
+                            <a href="#projects"><button>Portfolio</button></a>
                             <a href="#contact-skills"><button>Contact Me</button></a>
                         </div>
                         <div class="photo">
@@ -56,12 +43,25 @@
 
         <main>
             <section id="contact-skills">
-                <div class="contact">
-                    <h2>Contact Me</h2>
+                <div class="about">
+                    <h2>About me</h2>
+                    <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
+                        Critical Care Veterinary Nurse and
+                        Veterinary advisor within the pet insurance area. My passion for problem-solving and
+                        learning new technologies motivated me to transition into the tech industry.
+                        In March 2023, I moved into an RPA (Robotic Process
+                        Automation) Developer role.
+                    </p>
+                    <p>
+                        Fuelled by my love for learning, I recently completed a certificate in Front End Web
+                        Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
+                        online courses to further enhance my front-end development skills and pave the way
+                        towards becoming a full-stack developer.
+                    </p>
                     <div class="icons">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin social"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-github social"></i></i></a>
+                        <a href="#"><i class="fa-solid fa-envelope social"></i></a>
                     </div>
                 </div>
                 <div class="skills">
@@ -76,28 +76,35 @@
             </section>
 
             <section id="projects">
+                <h2>Portfolio</h2>
                 <div class="project-container">
                     <div class="project fade-in-section">
-                        <img src="./assets/images/Untitled design.png" alt="Project 1">
-                        <h3>Project Title 1</h3>
-                        <p>Description of Project 1.</p>
+                        <img src="./assets/images/devoppsscreenshot.png" alt="devopps screenshot">
+                        <h3>devOpps</h3>
+                        <p>devOpps is a group project, and serves as a comprehensive job website tailored specifically
+                            for developers.</p>
+                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
                         <a href="https://devopps.app" class="button">Go to Site</a>
                     </div>
                     <div class="project fade-in-section">
-                        <img src="./assets/images/Untitled design.png" alt="Project 2">
-                        <h3>Project Title 2</h3>
-                        <p>Description of Project 2.</p>
-                        <a href="https://example.com" class="button">Go to Site</a>
+                        <img src="./assets/images/portfolioscreenshot.png" alt="Portfolio screenshot">
+                        <h3>React Portfolio</h3>
+                        <p>A front end website portfolio showcasing previous projects.</p>
+                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
+                        <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
                     </div>
                     <div class="project fade-in-section">
-                        <img src="./assets/images/Untitled design.png" alt="Project 2">
-                        <h3>Project Title 2</h3>
-                        <p>Description of Project 2.</p>
-                        <a href="https://example.com" class="button">Go to Site</a>
+                        <img src="./assets/images/birthdayscreenshot.png" alt="Birthday screenshot">
+                        <h3>Birthday Blast From The Past</h3>
+                        <p>A group project, an application that combines personal information with movie data to create
+                            a nostalgic journey through time.</p>
+                        <p>Technologies: HTML, CSS, jQuery.</p>
+                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to
+                            Site</a>
                     </div>
                 </div>
             </section>
-            
+
 
 
 
@@ -118,7 +125,7 @@
                 </div>
             </div>
         </footer>
-        
+
 
 
 
