updated hero links, updated nav padding

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <div class="text">
                             <h2>Sarah Egleston</h2>
                             <h3>A front end developer.</h3>
-                            <a href="#projects"><button>Portfolio</button></a>
-                            <a href="#contact-skills"><button>Contact Me</button></a>
+                            <a href="https://github.com/segleston/FCSarahE" target="_blank"><button>WEBSITE GITHUB</button></a>
+                            <a href="#contact-skills"><button>CONTACT ME</button></a>
                         </div>
                         <div class="photo">
                             <img src="./assets/images/ir.png" alt="Photo of Sarah Egleston">
@@ -59,18 +59,20 @@
                         towards becoming a full-stack developer.
                     </p>
                     <div class="icons">
-                        <a href="#"><i class="fa-brands fa-linkedin social"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-github social"></i></i></a>
-                        <a href="#"><i class="fa-solid fa-envelope social"></i></a>
+                        <a href="https://www.linkedin.com/in/sarah-egleston" target="_blank" class="social-text"><i class="fa-brands fa-linkedin social"></i> Linkedin</a>
+                        <a href="https://github.com/segleston" target="_blank" class="social-text"><i class="fa-brands fa-square-github social"></i></i> Github</a>
+                        <a href="mailto:sarah.c.egleston@gmail.com" class="social-text"><i class="fa-solid fa-envelope social"></i> Email me</a>
                     </div>
                 </div>
                 <div class="skills">
                     <h2>Skills</h2>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <!-- Add more skills here -->
+                        <li><i class="fa-brands fa-html5"></i>  HTML5</li>
+                        <li><i class="fa-brands fa-css3-alt"></i>  CSS3</li>
+                        <li><i class="fa-brands fa-js"></i>  JavaScript</li>
+                        <li><i class="fa-brands fa-node-js"></i>  Node.js</li>
+                        <li><i class="fa-brands fa-react"></i>  React.js</li>
+                        <li><i class="fa-brands fa-git-alt"></i>  Git</li>
                     </ul>
                 </div>
             </section>
@@ -89,7 +91,7 @@
                     <div class="project fade-in-section">
                         <img src="./assets/images/portfolioscreenshot.png" alt="Portfolio screenshot">
                         <h3>React Portfolio</h3>
-                        <p>A front end website portfolio showcasing previous projects.</p>
+                        <p>A front end website portfolio to showcase previous projects, with a homepage and contact section.</p>
                         <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
                     </div>
@@ -120,8 +122,8 @@
                     <p>&copy; Sarah Egleston 2024</p>
                 </div>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="www.linkedin.com/in/sarah-egleston" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/segleston" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </footer>
