updated text on page, and colour of some elements

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div class="intro">
                         <div class="text">
                             <h2>Sarah Egleston</h2>
-                            <h3>A front end developer.</h3>
-                            <a href="https://github.com/segleston/FCSarahE" target="_blank"><button>WEBSITE GITHUB</button></a>
+                            <h3>I'm a front-end developer.</h3>
+                            <a href="https://github.com/segleston/FCSarahE" target="blank"><button>WEBSITE GITHUB</button></a>
                             <a href="#contact-skills"><button>CONTACT ME</button></a>
                         </div>
                         <div class="photo">
@@ -47,7 +47,7 @@
                     <h2>About me</h2>
                     <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
                         Critical Care Veterinary Nurse and
-                        Veterinary advisor within the pet insurance area. My passion for problem-solving and
+                        Veterinary advisor within the pet insurance industry. My passion for problem-solving and
                         learning new technologies motivated me to transition into the tech industry.
                         In March 2023, I moved into an RPA (Robotic Process
                         Automation) Developer role.
@@ -56,23 +56,31 @@
                         Fuelled by my love for learning, I recently completed a certificate in Front End Web
                         Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
                         online courses to further enhance my front-end development skills and pave the way
-                        towards becoming a full-stack developer.
+                        towards my goal of becoming a full-stack developer.
+                    </p>
+                    <p>
+                        I aspire to become a software developer because of my passion for problem-solving 
+                        and the limitless creativity it offers. The dynamic nature of the field continuously 
+                        challenges me to learn and grow, keeping me engaged and excited about the possibilities ahead.
+                    </p>
+                    <p> 
+                        If you like what you see, please get in touch.
                     </p>
                     <div class="icons">
-                        <a href="https://www.linkedin.com/in/sarah-egleston" target="_blank" class="social-text"><i class="fa-brands fa-linkedin social"></i> Linkedin</a>
-                        <a href="https://github.com/segleston" target="_blank" class="social-text"><i class="fa-brands fa-square-github social"></i></i> Github</a>
+                        <a href="https://www.linkedin.com/in/sarah-egleston" target="blank" class="social-text"><i class="fa-brands fa-linkedin social"></i> Linkedin</a>
+                        <a href="https://github.com/segleston" target="blank" class="social-text"><i class="fa-brands fa-square-github social"></i></i> Github</a>
                         <a href="mailto:sarah.c.egleston@gmail.com" class="social-text"><i class="fa-solid fa-envelope social"></i> Email me</a>
                     </div>
                 </div>
                 <div class="skills">
                     <h2>Skills</h2>
                     <ul>
-                        <li><i class="fa-brands fa-html5"></i>  HTML5</li>
-                        <li><i class="fa-brands fa-css3-alt"></i>  CSS3</li>
-                        <li><i class="fa-brands fa-js"></i>  JavaScript</li>
-                        <li><i class="fa-brands fa-node-js"></i>  Node.js</li>
-                        <li><i class="fa-brands fa-react"></i>  React.js</li>
-                        <li><i class="fa-brands fa-git-alt"></i>  Git</li>
+                        <li><i class="fa-brands fa-html5 skill-list"></i>  HTML5</li>
+                        <li><i class="fa-brands fa-css3-alt skill-list"></i>  CSS3</li>
+                        <li><i class="fa-brands fa-js skill-list"></i>  JavaScript</li>
+                        <li><i class="fa-brands fa-node-js skill-list"></i>  Node.js</li>
+                        <li><i class="fa-brands fa-react skill-list"></i>  React.js</li>
+                        <li><i class="fa-brands fa-git-alt skill-list"></i>  Git</li>
                     </ul>
                 </div>
             </section>
@@ -122,8 +130,8 @@
                     <p>&copy; Sarah Egleston 2024</p>
                 </div>
                 <div class="social-icons">
-                    <a href="www.linkedin.com/in/sarah-egleston" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/segleston" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/sarah-egleston" target="blank"><i class="fab fa-linkedin social-fa"></i></a>
+                    <a href="https://github.com/segleston" target="blank"><i class="fab fa-github social-fa"></i></a>
                 </div>
             </div>
         </footer>
