added further projects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="intro">
                         <div class="text">
                             <h2>Sarah Egleston</h2>
-                            <h3>I'm a front-end developer.</h3>
+                            <h3>I'm an aspiring full stack developer.</h3>
                             <a href="https://github.com/segleston/FCSarahE" target="blank"><button>WEBSITE GITHUB</button></a>
                             <a href="#contact-skills"><button>CONTACT ME</button></a>
                         </div>
@@ -47,13 +47,13 @@
                     <h2>About me</h2>
                     <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
                         Critical Care Veterinary Nurse and
-                        Veterinary advisor within the pet insurance industry. My passion for problem-solving and
-                        learning new technologies motivated me to transition into the tech industry.
-                        In March 2023, I moved into an RPA (Robotic Process
-                        Automation) Developer role.
+                        Veterinary Advisor within the Pet Insurance industry. My passion for 
+                        learning new technologies motivated me to transition into the tech industry in 2023
+                        with a move into RPA as a Robotic Process
+                        Automation Developer. This move ignited an interest in software development.
                     </p>
                     <p>
-                        Fuelled by my love for learning, I recently completed a certificate in Front End Web
+                        Fuelled by my new found interest, I recently completed a certificate in Front End Web
                         Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
                         online courses to further enhance my front-end development skills and pave the way
                         towards my goal of becoming a full-stack developer.
@@ -93,7 +93,7 @@
                         <h3>devOpps</h3>
                         <p>devOpps is a group project, and serves as a comprehensive job website tailored specifically
                             for developers.</p>
-                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
+                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js, API.</p>
                         <a href="https://devopps.app" class="button">Go to Site</a>
                     </div>
                     <div class="project fade-in-section">
@@ -106,6 +106,34 @@
                     <div class="project fade-in-section">
                         <img src="./assets/images/birthdayscreenshot.png" alt="Birthday screenshot">
                         <h3>Birthday Blast From The Past</h3>
+                        <p>A group project, an application that combines personal information with movie data to create
+                            a nostalgic journey through time.</p>
+                        <p>Technologies: HTML, CSS, jQuery, API.</p>
+                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to
+                            Site</a>
+                    </div>
+                </div>
+            </section>
+
+            <section id="projects">
+                <div class="project-container">
+                    <div class="project fade-in-section">
+                        <img src="./assets/images/password.png" alt="devopps screenshot">
+                        <h3>Password Generator</h3>
+                        <p>This is a password generator</p>
+                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
+                        <a href="https://devopps.app" class="button">Go to Site</a>
+                    </div>
+                    <div class="project fade-in-section">
+                        <img src="./assets/images/weather.png" alt="Portfolio screenshot">
+                        <h3>Weather Dashboard</h3>
+                        <p>A front end website portfolio to showcase previous projects, with a homepage and contact section.</p>
+                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
+                        <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
+                    </div>
+                    <div class="project fade-in-section">
+                        <img src="./assets/images/workday.png" alt="Birthday screenshot">
+                        <h3>Work Day Scheduler</h3>
                         <p>A group project, an application that combines personal information with movie data to create
                             a nostalgic journey through time.</p>
                         <p>Technologies: HTML, CSS, jQuery.</p>
