updated about me section

--- a/index.html
+++ b/index.html
@@ -50,13 +50,19 @@
                         Veterinary Advisor within the Pet Insurance industry. My passion for 
                         learning new technologies motivated me to transition into the tech industry in 2023
                         with a move into RPA as a Robotic Process
-                        Automation Developer. This move ignited an interest in software development.
+                        Automation Developer. This transition not only allowed me to leverage my problem-solving 
+                        skills in a new domain but also ignited an interest in software development. Working in RPA 
+                        exposed me to the power of automation and the intricacies of software systems, laying a solid 
+                        foundation for my journey into the world of coding.
                     </p>
                     <p>
-                        Fuelled by my new found interest, I recently completed a certificate in Front End Web
+                        Fuelled by my new found interest and eager to expand my skill set, I recently completed a 
+                        certificate in Front End Web
                         Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
                         online courses to further enhance my front-end development skills and pave the way
-                        towards my goal of becoming a full-stack developer.
+                        towards my goal of becoming a full-stack developer. I am particularly drawn to the 
+                        creative aspects of web development and the opportunity to build user-friendly 
+                        experiences that make a meaningful impact.
                     </p>
                     <p>
                         I aspire to become a software developer because of my passion for problem-solving 
@@ -95,6 +101,7 @@
                             for developers.</p>
                         <p>Technologies: HTML, CSS, JavaScript, React, Node.js, API.</p>
                         <a href="https://devopps.app" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/DevOpps" class="button">Go to Repo</a>
                     </div>
                     <div class="project fade-in-section">
                         <img src="./assets/images/portfolioscreenshot.png" alt="Portfolio screenshot">
@@ -102,6 +109,7 @@
                         <p>A front end website portfolio to showcase previous projects, with a homepage and contact section.</p>
                         <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/portfolio-react" class="button">Go to Repo</a>
                     </div>
                     <div class="project fade-in-section">
                         <img src="./assets/images/birthdayscreenshot.png" alt="Birthday screenshot">
@@ -109,8 +117,8 @@
                         <p>A group project, an application that combines personal information with movie data to create
                             a nostalgic journey through time.</p>
                         <p>Technologies: HTML, CSS, jQuery, API.</p>
-                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to
-                            Site</a>
+                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/birthday-blast-from-the-past" class="button">Go to Repo</a>
                     </div>
                 </div>
             </section>
@@ -120,25 +128,26 @@
                     <div class="project fade-in-section">
                         <img src="./assets/images/password.png" alt="devopps screenshot">
                         <h3>Password Generator</h3>
-                        <p>This is a password generator</p>
-                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
-                        <a href="https://devopps.app" class="button">Go to Site</a>
+                        <p>A password generator, requiring user input into alerts and a password is generated.</p>
+                        <p>Technologies: HTML, CSS, JavaScript.</p>
+                        <a href="https://segleston.github.io/weather-dashboard/" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/weather-dashboard" class="button">Go to Repo</a>
                     </div>
                     <div class="project fade-in-section">
                         <img src="./assets/images/weather.png" alt="Portfolio screenshot">
                         <h3>Weather Dashboard</h3>
-                        <p>A front end website portfolio to showcase previous projects, with a homepage and contact section.</p>
-                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
+                        <p>Front end weather dashboard using a weather API to show weather for specific locations.</p>
+                        <p>Technologies: HTML, CSS, JavaScript.</p>
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
+                        <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Repo</a>
                     </div>
                     <div class="project fade-in-section">
                         <img src="./assets/images/workday.png" alt="Birthday screenshot">
                         <h3>Work Day Scheduler</h3>
-                        <p>A group project, an application that combines personal information with movie data to create
-                            a nostalgic journey through time.</p>
-                        <p>Technologies: HTML, CSS, jQuery.</p>
-                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to
-                            Site</a>
+                        <p>A calendar application that allows a user to save events into local storage for each hour of the day.</p>
+                        <p>Technologies: HTML, CSS, JavaScript.</p>
+                        <a href="https://segleston.github.io/work-day-scheduler/" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/work-day-scheduler" class="button">Go to Repo</a>
                     </div>
                 </div>
             </section>
