--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel='stylesheet' href="./assets/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
     <script src="https://kit.fontawesome.com/b9d857a889.js" crossorigin="anonymous"></script>
     <title>Sarah Egleston</title>
 </head>
@@ -14,22 +15,30 @@
     <div class="background">
         <!-- Nav -->
         <header>
-            <nav>
-                <div class="left">
-                    <h1>Sarah.</h1>
+            <nav class="navbar">
+                <div class="navbar-left">
+                    <h1 class="logo">Sarah.</h1>
                 </div>
-                <div class="right">
-                    <a href="#about">About me</a>
-                    <a href="#projects">Portfolio</a>
-                    <a href="#contact-skills">Contact Me</a>
+                <div class="navbar-right">
+                    <ul class="menu">
+                        <li><a href="#contact-me">Contact Me</a></li>
+                        <li><a href="#contact-skills">About Me</a></li>
+                        <li><a href="#projects">Portfolio</a></li>
+                    </ul>
+                    <div class="hamburger">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
                 </div>
             </nav>
+            
             <section id="hero">
                 <div class="container">
                     <div class="intro">
                         <div class="text">
                             <h2>Sarah Egleston</h2>
-                            <h3>I'm an aspiring full stack developer.</h3>
+                            <h3>I'm an aspiring Full Stack Developer.</h3>
                             <a href="https://github.com/segleston/FCSarahE" target="blank"><button>WEBSITE GITHUB</button></a>
                             <a href="#contact-skills"><button>CONTACT ME</button></a>
                         </div>
@@ -70,9 +79,9 @@
                         challenges me to learn and grow, keeping me engaged and excited about the possibilities ahead.
                     </p>
                     <p> 
-                        If you like what you see, please get in touch.
+                        If you like what you see, please get in touch:
                     </p>
-                    <div class="icons">
+                    <div id='contact-me' class="icons">
                         <a href="https://www.linkedin.com/in/sarah-egleston" target="blank" class="social-text"><i class="fa-brands fa-linkedin social"></i> Linkedin</a>
                         <a href="https://github.com/segleston" target="blank" class="social-text"><i class="fa-brands fa-square-github social"></i></i> Github</a>
                         <a href="mailto:sarah.c.egleston@gmail.com" class="social-text"><i class="fa-solid fa-envelope social"></i> Email me</a>
@@ -111,6 +120,19 @@
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
                         <a href="https://github.com/segleston/portfolio-react" class="button">Go to Repo</a>
                     </div>
+                </div>
+            </section>
+
+            <section id="projects">
+                <div class="project-container">
+                    <div class="project fade-in-section">
+                        <img src="./assets/images/password.png" alt="password screenshot">
+                        <h3>Password Generator</h3>
+                        <p>A password generator, requiring user input into alerts and a password is generated.</p>
+                        <p>Technologies: HTML, CSS, JavaScript.</p>
+                        <a href="https://segleston.github.io/weather-dashboard/" class="button">Go to Site</a>
+                        <a href="https://github.com/segleston/weather-dashboard" class="button">Go to Repo</a>
+                    </div>
                     <div class="project fade-in-section">
                         <img src="./assets/images/birthdayscreenshot.png" alt="Birthday screenshot">
                         <h3>Birthday Blast From The Past</h3>
@@ -126,15 +148,7 @@
             <section id="projects">
                 <div class="project-container">
                     <div class="project fade-in-section">
-                        <img src="./assets/images/password.png" alt="devopps screenshot">
-                        <h3>Password Generator</h3>
-                        <p>A password generator, requiring user input into alerts and a password is generated.</p>
-                        <p>Technologies: HTML, CSS, JavaScript.</p>
-                        <a href="https://segleston.github.io/weather-dashboard/" class="button">Go to Site</a>
-                        <a href="https://github.com/segleston/weather-dashboard" class="button">Go to Repo</a>
-                    </div>
-                    <div class="project fade-in-section">
-                        <img src="./assets/images/weather.png" alt="Portfolio screenshot">
+                        <img src="./assets/images/weather.png" alt="weather screenshot">
                         <h3>Weather Dashboard</h3>
                         <p>Front end weather dashboard using a weather API to show weather for specific locations.</p>
                         <p>Technologies: HTML, CSS, JavaScript.</p>
@@ -142,7 +156,7 @@
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Repo</a>
                     </div>
                     <div class="project fade-in-section">
-                        <img src="./assets/images/workday.png" alt="Birthday screenshot">
+                        <img src="./assets/images/workday.png" alt="workday screenshot">
                         <h3>Work Day Scheduler</h3>
                         <p>A calendar application that allows a user to save events into local storage for each hour of the day.</p>
                         <p>Technologies: HTML, CSS, JavaScript.</p>
