--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- CSS link -->
     <link rel='stylesheet' href="./assets/style.css">
+    <!-- favicon link -->
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+    <!-- font awesome link for social icons -->
     <script src="https://kit.fontawesome.com/b9d857a889.js" crossorigin="anonymous"></script>
     <title>Sarah Egleston</title>
 </head>
@@ -25,6 +28,7 @@
                         <li><a href="#contact-skills">About Me</a></li>
                         <li><a href="#projects">Portfolio</a></li>
                     </ul>
+                    <!-- hamburger for medium screens and below -->
                     <div class="hamburger">
                         <div class="icon"></div>
                         <div class="icon"></div>
@@ -32,17 +36,20 @@
                     </div>
                 </div>
             </nav>
-            
+
             <section id="hero">
                 <div class="container">
                     <div class="intro">
                         <div class="text">
+                            <!-- Web site greeting -->
                             <h2>Sarah Egleston</h2>
                             <h3>I'm an aspiring Full Stack Developer.</h3>
-                            <a href="https://github.com/segleston/FCSarahE" target="blank"><button>WEBSITE GITHUB</button></a>
+                            <a href="https://github.com/segleston/FCSarahE" target="blank"><button>WEBSITE
+                                    GITHUB</button></a>
                             <a href="#contact-skills"><button>CONTACT ME</button></a>
                         </div>
                         <div class="photo">
+                            <!-- Main hero photo -->
                             <img src="./assets/images/ir.png" alt="Photo of Sarah Egleston">
                         </div>
                     </div>
@@ -52,54 +59,60 @@
 
         <main>
             <section id="contact-skills">
+                <!-- about me body of text -->
                 <div class="about">
                     <h2>About me</h2>
                     <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
                         Critical Care Veterinary Nurse and
-                        Veterinary Advisor within the Pet Insurance industry. My passion for 
+                        Veterinary Advisor within the Pet Insurance industry. My passion for
                         learning new technologies motivated me to transition into the tech industry in 2023
                         with a move into RPA as a Robotic Process
-                        Automation Developer. This transition not only allowed me to leverage my problem-solving 
-                        skills in a new domain but also ignited an interest in software development. Working in RPA 
-                        exposed me to the power of automation and the intricacies of software systems, laying a solid 
+                        Automation Developer. This transition not only allowed me to leverage my problem-solving
+                        skills in a new domain but also ignited an interest in software development. Working in RPA
+                        exposed me to the power of automation and the intricacies of software systems, laying a solid
                         foundation for my journey into the world of coding.
                     </p>
                     <p>
-                        Fuelled by my new found interest and eager to expand my skill set, I recently completed a 
+                        Fuelled by my new found interest and eager to expand my skill set, I recently completed a
                         certificate in Front End Web
                         Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
                         online courses to further enhance my front-end development skills and pave the way
-                        towards my goal of becoming a full-stack developer. I am particularly drawn to the 
-                        creative aspects of web development and the opportunity to build user-friendly 
+                        towards my goal of becoming a full-stack developer. I am particularly drawn to the
+                        creative aspects of web development and the opportunity to build user-friendly
                         experiences that make a meaningful impact.
                     </p>
                     <p>
-                        I aspire to become a software developer because of my passion for problem-solving 
-                        and the limitless creativity it offers. The dynamic nature of the field continuously 
+                        I aspire to become a software developer because of my passion for problem-solving
+                        and the limitless creativity it offers. The dynamic nature of the field continuously
                         challenges me to learn and grow, keeping me engaged and excited about the possibilities ahead.
                     </p>
-                    <p> 
+                    <p>
                         If you like what you see, please get in touch:
                     </p>
+                    <!-- contact me social icons -->
                     <div id='contact-me' class="icons">
-                        <a href="https://www.linkedin.com/in/sarah-egleston" target="blank" class="social-text"><i class="fa-brands fa-linkedin social"></i> Linkedin</a>
-                        <a href="https://github.com/segleston" target="blank" class="social-text"><i class="fa-brands fa-square-github social"></i></i> Github</a>
-                        <a href="mailto:sarah.c.egleston@gmail.com" class="social-text"><i class="fa-solid fa-envelope social"></i> Email me</a>
+                        <a href="https://www.linkedin.com/in/sarah-egleston" target="blank" class="social-text"><i
+                                class="fa-brands fa-linkedin social"></i> Linkedin</a>
+                        <a href="https://github.com/segleston" target="blank" class="social-text"><i
+                                class="fa-brands fa-square-github social"></i></i> Github</a>
+                        <a href="mailto:sarah.c.egleston@gmail.com" class="social-text"><i
+                                class="fa-solid fa-envelope social"></i> Email me</a>
                     </div>
                 </div>
                 <div class="skills">
                     <h2>Skills</h2>
+                    <!-- skills list -->
                     <ul>
-                        <li><i class="fa-brands fa-html5 skill-list"></i>  HTML5</li>
-                        <li><i class="fa-brands fa-css3-alt skill-list"></i>  CSS3</li>
-                        <li><i class="fa-brands fa-js skill-list"></i>  JavaScript</li>
-                        <li><i class="fa-brands fa-node-js skill-list"></i>  Node.js</li>
-                        <li><i class="fa-brands fa-react skill-list"></i>  React.js</li>
-                        <li><i class="fa-brands fa-git-alt skill-list"></i>  Git</li>
+                        <li><i class="fa-brands fa-html5 skill-list"></i> HTML5</li>
+                        <li><i class="fa-brands fa-css3-alt skill-list"></i> CSS3</li>
+                        <li><i class="fa-brands fa-js skill-list"></i> JavaScript</li>
+                        <li><i class="fa-brands fa-node-js skill-list"></i> Node.js</li>
+                        <li><i class="fa-brands fa-react skill-list"></i> React.js</li>
+                        <li><i class="fa-brands fa-git-alt skill-list"></i> Git</li>
                     </ul>
                 </div>
             </section>
-
+            <!-- first row of projects -->
             <section id="projects">
                 <h2>Portfolio</h2>
                 <div class="project-container">
@@ -115,14 +128,15 @@
                     <div class="project fade-in-section">
                         <img src="./assets/images/portfolioscreenshot.png" alt="Portfolio screenshot">
                         <h3>React Portfolio</h3>
-                        <p>A front end website portfolio to showcase previous projects, with a homepage and contact section.</p>
+                        <p>A front end website portfolio to showcase previous projects, with a homepage and contact
+                            section.</p>
                         <p>Technologies: HTML, CSS, JavaScript, React, Node.js.</p>
                         <a href="https://segleston.github.io/portfolio-react/" class="button">Go to Site</a>
                         <a href="https://github.com/segleston/portfolio-react" class="button">Go to Repo</a>
                     </div>
                 </div>
             </section>
-
+            <!-- second row of projects -->
             <section id="projects">
                 <div class="project-container">
                     <div class="project fade-in-section">
@@ -139,12 +153,14 @@
                         <p>A group project, an application that combines personal information with movie data to create
                             a nostalgic journey through time.</p>
                         <p>Technologies: HTML, CSS, jQuery, API.</p>
-                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to Site</a>
-                        <a href="https://github.com/segleston/birthday-blast-from-the-past" class="button">Go to Repo</a>
+                        <a href="https://segleston.github.io/birthday-blast-from-the-past/" class="button">Go to
+                            Site</a>
+                        <a href="https://github.com/segleston/birthday-blast-from-the-past" class="button">Go to
+                            Repo</a>
                     </div>
                 </div>
             </section>
-
+            <!-- Third row of projects -->
             <section id="projects">
                 <div class="project-container">
                     <div class="project fade-in-section">
@@ -158,41 +174,34 @@
                     <div class="project fade-in-section">
                         <img src="./assets/images/workday.png" alt="workday screenshot">
                         <h3>Work Day Scheduler</h3>
-                        <p>A calendar application that allows a user to save events into local storage for each hour of the day.</p>
+                        <p>A calendar application that allows a user to save events into local storage for each hour of
+                            the day.</p>
                         <p>Technologies: HTML, CSS, JavaScript.</p>
                         <a href="https://segleston.github.io/work-day-scheduler/" class="button">Go to Site</a>
                         <a href="https://github.com/segleston/work-day-scheduler" class="button">Go to Repo</a>
                     </div>
                 </div>
             </section>
-
-
-
-
-
-
-
         </main>
-
+        <!-- Footer section -->
         <footer id="footer">
             <div class="footer-inner">
+                <!-- scroll to top arrow -->
                 <i id="arrow" class="fa-solid fa-circle-arrow-up"></i>
                 <div class="footer-content">
                     <p>&copy; Sarah Egleston 2024</p>
                 </div>
+                <!-- Social links in footer -->
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/sarah-egleston" target="blank"><i class="fab fa-linkedin social-fa"></i></a>
+                    <a href="https://www.linkedin.com/in/sarah-egleston" target="blank"><i
+                            class="fab fa-linkedin social-fa"></i></a>
                     <a href="https://github.com/segleston" target="blank"><i class="fab fa-github social-fa"></i></a>
                 </div>
             </div>
         </footer>
 
-
-
-
-
     </div>
-
+    <!-- Link to javascript -->
     <script src="./assets/script.js"></script>
 </body>
 
