updated about me section

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                 <!-- about me body of text -->
                 <div class="about">
                     <h2>About me</h2>
-                    <p>I am a career changer based in Bedfordshire, UK. Previously, I worked as an Emergency and
-                        Critical Care Veterinary Nurse and
+                    <p>I'm Sarah, a career changer based in Bedfordshire, UK with my partner and four cats.
+                        I'm Irish, but have lived in the UK for the past 13 years.
+                        Previously, I worked as an Emergency and Critical Care Veterinary Nurse and
                         Veterinary Advisor within the Pet Insurance industry. My passion for
                         learning new technologies motivated me to transition into the tech industry in 2023
                         with a move into RPA as a Robotic Process
@@ -77,14 +78,25 @@
                         certificate in Front End Web
                         Development with EdX, achieving a final score of 100%. Currently, I'm undertaking
                         online courses to further enhance my front-end development skills and pave the way
-                        towards my goal of becoming a full-stack developer. I am particularly drawn to the
-                        creative aspects of web development and the opportunity to build user-friendly
-                        experiences that make a meaningful impact.
+                        towards my goal of becoming a full-stack developer.
                     </p>
                     <p>
-                        I aspire to become a software developer because of my passion for problem-solving
-                        and the limitless creativity it offers. The dynamic nature of the field continuously
-                        challenges me to learn and grow, keeping me engaged and excited about the possibilities ahead.
+                        I'm applying for <strong>Founders & Coders</strong> because I seek an environment where I can collaborate with
+                        others
+                        who share my interests and goals. Being in a community of like-minded people spurs an atmosphere
+                        of
+                        growth and mutual support, which I find invaluable. The prospect of collaborating with others
+                        who are
+                        equally passionate about web development is especially exciting to me.
+                    </p>
+                    <p>
+                        I'm drawn to the creative aspects of Web Development, where I can craft user-friendly
+                        experiences
+                        that leave a meaningful impact on users. My journey towards becoming a software developer is
+                        fueled
+                        by my passion for problem-solving and my love for creativity. The ever-evolving nature of this
+                        field
+                        keeps me constantly challenged and motivated to learn and innovate.
                     </p>
                     <p>
                         If you like what you see, please get in touch:
