--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <h3>devOpps</h3>
                         <p>devOpps is a group project, and serves as a comprehensive job website tailored specifically
                             for developers.</p>
-                        <p>Technologies: HTML, CSS, JavaScript, React, Node.js, API.</p>
+                        <p>Technologies: HTML, CSS, Tailwind CSS, JavaScript, React, Node.js, API.</p>
                         <a href="https://devopps.app" class="button">Go to Site</a>
                         <a href="https://github.com/segleston/DevOpps" class="button">Go to Repo</a>
                     </div>
